--- a/.classpath
+++ b/.classpath
@@ -6,30 +6,14 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="../../lib/postgresql-42.2.23.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="../../lib/jackson-core-2.14.1.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="../../lib/jackson-databind-2.14.1.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="../../lib/jackson-annotations-2.14.1.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="../../lib/servlet-api.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="lib" path="../../lib/postgresql-42.2.23.jar"/>
+	<classpathentry kind="lib" path="../../lib/jackson-core-2.14.1.jar"/>
+	<classpathentry kind="lib" path="../../lib/jackson-databind-2.14.1.jar"/>
+	<classpathentry kind="lib" path="../../lib/jackson-annotations-2.14.1.jar"/>
+	<classpathentry kind="lib" path="../../lib/servlet-api.jar"/>
+	<classpathentry kind="lib" path="../../lib/commons-codec-1.11.jar"/>
+	<classpathentry kind="lib" path="../../lib/jjwt-api-0.11.2.jar"/>
+	<classpathentry kind="lib" path="../../lib/jjwt-impl-0.11.2.jar"/>
+	<classpathentry kind="lib" path="../../lib/jjwt-jackson-0.11.2.jar"/>
 	<classpathentry kind="output" path="WEB-INF/classes"/>
 </classpath>
